# mcp-stdio-wrapper

./: .gitignore  Cargo.toml  Makefile  README.md  bench-py-wrapper.sh  bench-wrapper.sh  bench.toml  coverage.sh  pedantic-clippy.sh  test-fast-time-curl.sh  test-fast-time-wrapper.sh  test-fast-time.sh  test-py-wrapper.sh  test-sdk-server-curl.sh  test-sdk-server-sample.sh  test.sh  token-from-file.sh
.github/workflows/: rust-ci.yml
benches/: parsing_benchmark.rs
scripts/: pedantic-clippy.sh  test-fast-time-curl-direct.sh  test-fast-time-curl.sh  test-fast-time-wrapper.sh  test-sdk-server-sample.sh  token-from-file.sh
src/: config.rs  config_defaults.rs  config_from_cli.rs  config_from_env.rs  http_client.rs  json_rpc_event.rs  json_rpc_find_value.rs  json_rpc_header.rs  json_rpc_id_fast.rs  json_rpc_value.rs  lib.rs  logger.rs  main.rs  main_init.rs  main_loop.rs  mcp_client.rs  mcp_workers.rs  mcp_workers_write.rs  post_result.rs  stdio_process.rs  stdio_reader.rs  stdio_writer.rs  streamer.rs  streamer_auth.rs  streamer_error.rs  streamer_id.rs  streamer_new.rs  streamer_post.rs  streamer_send.rs  streamer_session.rs
tests/: streamer_test.rs  test_config.rs  test_error.rs  test_id_parser.rs  test_lines_processing.rs  test_logger.rs  test_logger_file.rs  test_main.rs  test_main_loop.rs  test_mcp_workers.rs  test_mcp_workers_write.rs  test_reader.rs  test_streamer.rs  test_streamer_cert.rs  test_streamer_no_session_id.rs  test_streamer_post.rs  test_streamer_post_fail.rs  test_streamer_session.rs  test_writer.rs
