[package]
name = "mcp_stdio_wrapper"
version = "1.0.0-BETA-1"
edition = "2021"
default-run = "mcp_stdio_wrapper"

[dependencies]
dotenvy = "0.15.7"
flume = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
envy = "0.4.2"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
futures = "0.3.31"
http = "1.4.0"
serde_json = "1.0.149"
jsonrpc-core = "18.0.0"
struson = { version = "0.6.0", features = ["serde"] }

[dev-dependencies]
mockito = "1.7.1"
tokio-test = "0.4.5"


