[package]
name = "mcp_stdio_wrapper"
version = "1.0.0-BETA-1"
edition = "2021"
default-run = "mcp_stdio_wrapper"

[dependencies]
dotenvy = "0.15.7"
flume = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.54", features = ["derive"] }
hyper = { version = "1.5.2", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27.5", features = ["http2", "ring"] }
http-body-util = "0.1.2"
tower = { version = "0.5.2", features = ["timeout"] }
futures = "0.3.31"
http = "1.4.0"
rustls = "0.23.20"
rustls-pemfile = "2.2.0"
serde_json = "1.0.149"
jsonrpc-core = "18.0.0"
actson = "2.1.0"
tracing-appender = "0.2.4"
toml = "0.9.11"
libc = "0.2"
indexmap = "2.7.0"
bytes = "1.11.0"
nom = "7"
tempfile = "3.24.0"

[dev-dependencies]
mockito = "1.7.1"
tokio-test = "0.4.5"
tracing-test = "0.2.5"
criterion = "0.5"
reqwest = { version = "0.13.1", features = ["json"] }


